Fixed the tile spacing after word submission. Still need to fix the UI drag n drop so tiles can't be place anywhere. also need to make README for this

--- a/HW5/style.css
+++ b/HW5/style.css
@@ -13,21 +13,21 @@ body {
 }
 
 #rack-img {
-    width: 600px;
+    width: 650px;
 }
 
 #rack-tiles {
     position: absolute;
     top: 22px;   /* adjust based on how high you want tiles to sit */
-    left: -65px;  /* horizontal padding */
+    left: -32px;  /* horizontal padding */
     width: 550px;
     height: 70px;
     z-index: 20;
 }
 
 .scrabble-tile {
-    width: 50px;
-    height: 50px;
+    width: 55px;
+    height: 60px;
     cursor: grab;
     position: absolute;
     z-index: 50;
@@ -99,4 +99,3 @@ body {
     font-size: 16px;
     cursor: pointer;
 }
-
